# sandboxy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/core/: gpt5.yaml  gpt5_nano.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ContextPanel.tsx  EventPanel.tsx  Layout.tsx  ShareButton.tsx  Slider.tsx  VariableInputs.tsx
frontend/src/hooks/: useModules.ts  useSession.ts
frontend/src/lib/: api.ts
frontend/src/pages/: BuilderPage.tsx  HomePage.tsx  LandingPage.tsx  SessionPage.tsx
modules/: break_the_bank.yml  lemonade_stand_v1.yml  negotiation_arena.yml  shopify_refund_v1.yml  social_engineering_interactive.yml  social_engineering_v1.yml  wedding_planner.yml
sandboxy/: __init__.py
sandboxy/agents/: __init__.py  base.py  llm_prompt.py  loader.py
sandboxy/api/: __init__.py  app.py  rate_limit.py  websocket.py
sandboxy/api/routes/: __init__.py  agents.py  modules.py  sessions.py
sandboxy/arena/: runner.py
sandboxy/cli/: __init__.py  main.py
sandboxy/core/: __init__.py  async_runner.py  mdl_parser.py  runner.py  state.py
sandboxy/db/: __init__.py  crud.py  database.py  models.py
sandboxy/providers/: __init__.py  openrouter.py
sandboxy/session/: __init__.py  manager.py
sandboxy/tools/: __init__.py  base.py  loader.py  mock_browser.py  mock_email.py  mock_lemonade.py  mock_shopify.py  mock_store.py  mock_wedding.py
tests/: __init__.py  test_agents.py  test_mdl_parser.py  test_runner.py  test_tools.py
tools/core/: mock_browser.yaml  mock_email.yaml  mock_shopify.yaml
webui/: package-lock.json  package.json  server.mjs
webui-dont-use/: package-lock.json  package.json  server.mjs
webui-dont-use/public/: index.html
webui/public/: index.html
