[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandboxy"
version = "0.1.0"
description = "Open-source agent simulation and benchmarking platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Sandboxy Team" }
]
keywords = ["ai", "agents", "simulation", "benchmarking", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
    "openai>=1.0",
    # FastAPI + WebSocket support
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    # Database (SQLite for local, PostgreSQL for production/Supabase)
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    # Anthropic support
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-PyYAML",
]

[project.scripts]
sandboxy = "sandboxy.cli.main:main"
sandboxy-server = "sandboxy.api.app:run_server"

[project.urls]
Homepage = "https://github.com/sandboxy-ai/sandboxy"
Repository = "https://github.com/sandboxy-ai/sandboxy"

[tool.hatch.build.targets.wheel]
packages = ["sandboxy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-PyYAML",
]
